--- a/content-design/Crime/modular/police-recorded-crime/index.html
+++ b/content-design/Crime/modular/police-recorded-crime/index.html
@@ -150,7 +150,16 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#main-points">Main points</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#analysis">Analysis of crime trends</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall-police-recorded-crime">Overall police recorded crime</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#public-order-offences">Public order offences</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#sexual-offences">Sexual offences</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#domestic-abuse">Domestic abuse</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#data">Crime data</a>
@@ -215,22 +224,27 @@ summary: "Crime against households and adults, also including data on crime expe
       <div id="main-points" class="content-margin">
         <h2>2. Main points</h2>
               <ul>
-                <li>Overall levels of crime showed falls in recent decades, but levels have remained broadly stable in recent years. </li>
-                <li>While in the last year there has been no change in overall levels of crime, this hides variation seen in individual crime types. </li>
-                <li>The latest figures show a mixed picture, with continued rises in some types of theft and fraud and falls in computer misuse.</li>
-                <li>Consistent with the rising trend over recent years, there were increases in some of the less frequently occurring but higher-harm types of violence, including offences involving knives and sharp instruments.</li>
+                <li>The number of crimes recorded by the police increased by 8% (to 6 million offences) in the year ending March 2019 compared with the previous year</li>
+                <li>7% increase in sexual offences</li>
+                <li>22% increase in the total number of domestic abuse-related offences</li>
+                <li>16% increase in public order offences.</li>
               </ul>
 
-            <div class="content-margin">
-              <h3>Statistician's comment</h3>
-                <p>Commenting on today’s figures, Mark Bangs from the Office for National Statistics Centre for Crime and Justice said:</p>
-                <p>“The picture of crime is a complex one. Overall levels of crime have remained steady, but this is not the case for all types of crime. For example, overall levels of violence have remained steady but we have seen increases in violent crimes involving knives and sharp instruments. We have seen increases in fraud and overall theft, but decreases in burglary following recent rises.”</p>
+              <!-- Warning text -->
+                        <div class="warning-text" style="padding: 0; margin-bottom: 24px;">
+                          <span class="warning-text__icon" aria-hidden="false">!</span>
+                          <strong class="warning-text__text font-normal" style="padding-left: 72px;">
+                            <span class="warning-text__assistive">Warning</span>
+                            A rise or fall in police recorded crime does not necessarily mean the actual level of crime in society has changed as these figures can be affected by changes in recording practices, policing activity and victims’ willingness to report crimes.
+                          </strong>
+                        </div>
+                      </div>
 
           <a class="print--hide js-scroll" href="#toc">Back to table of contents</a>
 
           <!-- Section 3 - analysis of earnings-->
-          <div id="analysis">
-            <h2>3.Analysis of crime trends</h2>
+          <div id="overall-police-recorded-crime">
+            <h2>3.Overall police recorded crime</h2>
 
                     <!-- Chart -->
                     <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="2432" data-gtm-vis-total-visible-time-6431828_3669="5000" data-gtm-vis-has-fired-6431828_3669="1">
