--- a/prototypes.html
+++ b/prototypes.html
@@ -19,8 +19,10 @@ footer: false
         </ul>
         <h4>Modular crime bulletin</h4>
         <ul>
-            <li><a href="content-design/Crime/modular/overall/">Overview of crime</a></li>
-            <li><a href="content-design/Crime/modular/overall/">Overview of crime</a></li>
+            <li><a href="content-design/Crime/modular/overview/">Overview of crime</a></li>
+            <li><a href="content-design/Crime/modular/violent-crime/">Violent crime</a></li>
+            <li><a href="content-design/Crime/modular/fraud-and-computer-misuse">Fraud and computer misuse</a></li>
+            <li><a href="content-design/Crime/modular/police-recorded-crime/">Police recorded crime</a></li>
         </ul>
 
 
