--- a/content-design/Crime/modular/overview/index.html
+++ b/content-design/Crime/modular/overview/index.html
@@ -342,6 +342,8 @@ summary: "Crime against households and adults, also including data on crime expe
 
             <p>On the other hand, police recorded crime excludes offences that are not reported to, or not recorded by, the police and does not include less serious offences dealt with by magistrates’ courts (for example, motoring offences). Trends can be influenced by changes in recording practices or police activity as well as public reporting of crime, making it difficult to make long-term comparisons. There are also concerns about the quality of recording – crimes may not be recorded consistently across police forces and so the true level of recorded crime may be understated.</p>
 
+            <p>Statistics based on police recorded crime data have been assessed against the Code of Practice for Statistics and found not to meet the required standard for designation as National Statistics. The full assessment report can be found on the <a class href="https://www.statisticsauthority.gov.uk/publication/statistics-on-crime-in-england-and-wales/">UK Statistics Authority website.</a></p>
+
             <p><a class href="#toc">Back to table of contents</a></p>
 
           </div>
