--- a/content-design/Crime/modular/property-crime/index.html
+++ b/content-design/Crime/modular/property-crime/index.html
@@ -150,7 +150,7 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#main-points">Main points</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall-theft-offences">Overall theft offences</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#theft">Theft</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#burglary-vehicle-theft-and-robbery">Burglary, vehicle theft and robbery</a>
@@ -230,8 +230,8 @@ summary: "Crime against households and adults, also including data on crime expe
 
                 <a class="print--hide js-scroll" href="#toc">Back to table of contents</a>
 
-      <div id="overall-theft-offences">
-        <h2>3. Overall theft offences</h2>
+      <div id="theft">
+        <h2>3. Theft</h2>
                   <!-- Chart -->
                                       <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
                                       <h4 class="flush--third--vertical">Figure 1: The Crime Survey for England and Wales indicates emerging rise in overall theft offences following long-term declines</h4>
