--- a/content-design/Crime/single/index.html
+++ b/content-design/Crime/single/index.html
@@ -162,7 +162,7 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#homicide">Homicide</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall-theft-offences">Overall theft offences</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#theft">Theft</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#burglary-vehicle-theft-and-robbery">Burglary, vehicle theft and robbery</a>
@@ -466,8 +466,8 @@ summary: "Crime against households and adults, also including data on crime expe
           <p><a class href="#toc">Back to table of contents</a></p>
 
 
-  <div id="overall-theft-offences">
-    <h2>7. Overall theft offences</h2>
+  <div id="theft">
+    <h2>7. Theft</h2>
               <!-- Chart -->
                         <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
                         <h4 class="flush--third--vertical">Figure 6: The Crime Survey for England and Wales indicates emerging rise in overall theft offences following long-term declines</h4>
@@ -674,6 +674,8 @@ summary: "Crime against households and adults, also including data on crime expe
             <p>Police recorded crime has wider offence coverage and population coverage than the CSEW. It is the primary source of local crime statistics and is a good measure of offences that are well-reported to and well-recorded by the police, as well as lower volume crimes (for example, homicide). In addition, the time lag between occurrence of crime and reporting results tends to be short, providing an indication of emerging trends.</p>
 
             <p>On the other hand, police recorded crime excludes offences that are not reported to, or not recorded by, the police and does not include less serious offences dealt with by magistrates’ courts (for example, motoring offences). Trends can be influenced by changes in recording practices or police activity as well as public reporting of crime, making it difficult to make long-term comparisons. There are also concerns about the quality of recording – crimes may not be recorded consistently across police forces and so the true level of recorded crime may be understated.</p>
+
+            <p>Statistics based on police recorded crime data have been assessed against the Code of Practice for Statistics and found not to meet the required standard for designation as National Statistics. The full assessment report can be found on the <a class href="https://www.statisticsauthority.gov.uk/publication/statistics-on-crime-in-england-and-wales/">UK Statistics Authority website.</a></p>
 
             <p><a class href="#toc">Back to table of contents</a></p>
 
