Added visual crime prototype

--- a/prototypes.html
+++ b/prototypes.html
@@ -14,17 +14,21 @@ footer: false
       <h1>Prototypes</h1>
         <h2 class="margin-bottom--0">September 2019</h2>
         <p>We're testing whether users prefer one crime bulletin, containing all analysis of crime trends, or a modular bulletin, which breaks the analysis down by topic. These bulletins use the data from the March 2019 release.</p>
-        <ul>
-          <li><a href="content-design/Crime/single/">One crime bulletin</a></li>
-        </ul>
+        <h4>Single page crime bulletin</h4>
+            <ul>
+              <li><a href="content-design/Crime/single/">One crime bulletin</a></li>
+            </ul>
         <h4>Modular crime bulletin</h4>
-        <ul>
-            <li><a href="content-design/Crime/modular/overview/">Overview of crime</a></li>
-            <li><a href="content-design/Crime/modular/violent-crime/">Violent crime</a></li>
-            <li><a href="content-design/Crime/modular/fraud-and-computer-misuse">Fraud and computer misuse</a></li>
-            <li><a href="content-design/Crime/modular/police-recorded-crime/">Police recorded crime</a></li>
-        </ul>
-
+            <ul>
+                <li><a href="content-design/Crime/modular/overview/">Overview of crime</a></li>
+                <li><a href="content-design/Crime/modular/violent-crime/">Violent crime</a></li>
+                <li><a href="content-design/Crime/modular/fraud-and-computer-misuse">Fraud and computer misuse</a></li>
+                <li><a href="content-design/Crime/modular/police-recorded-crime/">Police recorded crime</a></li>
+            </ul>
+        <h4>Visual crime bulletin</h4>
+                <ul>
+                  <li><a href="content-design/Crime/visual/">One crime bulletin</a></li>
+                </ul>
 
       <h2 class="margin-bottom--0">August 2019</h2>
 
