--- a/prototypes.html
+++ b/prototypes.html
@@ -27,7 +27,7 @@ footer: false
             </ul>
         <h4>Visual crime bulletin</h4>
                 <ul>
-                  <li><a href="content-design/Crime/visual/">One crime bulletin</a></li>
+                  <li><a href="content-design/Crime/visual/">Visual crime bulletin</a></li>
                 </ul>
 
       <h2 class="margin-bottom--0">August 2019</h2>
