--- a/content-design/Crime/visual/index.html
+++ b/content-design/Crime/visual/index.html
@@ -147,7 +147,7 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#main-points">Main points</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall">Overall estimates of crime</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall">Analysis of crime trends</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#data">Crime data</a>
@@ -226,10 +226,83 @@ summary: "Crime against households and adults, also including data on crime expe
           <p><a class href="#toc">Back to table of contents</a></p>
 
           <!-- Section 3 - analysis of earnings-->
-          <div id="overall">
-            <h2>2.Overall estimates of crime</h2>
-                    <img style="width:100%" src="{{ "/assets/img/charts/crime_table_2.png" | relative_url }}" class="margin-bottom--3" alt="">
-                    <p class="font-xxsmall margin-bottom--3">Source: Crime Survey for England and Wales, Office for National Statistics</p>
+<div id="overall">
+  <h2>2.Analysis of crime trends</h2>
+      <p>The long-term picture of overall crime estimated by the Crime Survey for England and Wales (CSEW) shows continued falls since the mid-1990s. The latest estimates for the year ending March 2019 show that there was no significant change in all CSEW crime (including fraud and computer misuse) experienced by adults aged 16 years and over compared with the previous year (11.2 million offences). However, it is important to look at individual crime types as the relatively stable overall picture hides variation both within and across crime types.</p>
+
+      <!-- Table 1-->
+          <img style="width:100%" src="{{ "/assets/img/charts/crime_table_2.png" | relative_url }}" class="margin-bottom--3" alt="">
+              <p class="font-xxsmall margin-bottom--3">Source: Crime Survey for England and Wales, Office for National Statistics</p>
+
+      <p>For more detailed figures including timeseries see <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesappendixtables">Appendix tables</a></p>
+
+      <p>For more information about the CSEW and police recorded crime see the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
+
+      <p><a class href="#toc">Back to table of contents</a></p>
+
+      <h3>Violent crime</h3>
+
+      <p>  There were an estimated 1.3 million incidents of violence experienced by adults aged 16 years and over in the latest CSEW survey for the year ending March 2019. This figure has not changed significantly compared with the previous year and continues the relatively stable trend seen over the last five years, following long-term decreases since the peak in 1995. For the offences and population that it covers, the CSEW provides the best measure of trends for overall violent crime, and particularly more common but less harmful offences</p>
+
+      <h3>Homicide</h3>
+
+      <p>  The total number of homicides recorded by the police fell by 4% in the last year (to 701 offences). This fall comes after an upward trend in homicides seen over the last four years, which contrasts with the downward trend over the previous decade. Despite this, the rate of homicide in the population remains very low, at 12 homicides per 1 million people.  In part, this latest fall in homicides results from terrorist incidents having occurred in the previous year. It also reflects a decrease recorded by the Metropolitan Police in the latest year following a notably high number recorded in the previous year. The picture across other police forces was mixed.</p>
+
+      <h3>  Knife and sharp instrument offences</h3>
+
+      <p>Latest figures showed an 8% rise in offences involving knives or sharp instruments recorded by the police in the last year (to 43,516 offences), the highest number since recording began in March 2011. This latest rise is smaller than seen a year ago but continues the year-on-year increase in these offences since the year ending March 2014, following an initial downward trend. Knife and sharp instrument offences continued to be concentrated in metropolitan areas, with London having the highest rate of 169 offences per 100,000 population.</p>
+
+          <!-- Warning text -->
+          <div class="warning-text" style="padding: 0; margin-bottom: 24px;">
+            <span class="warning-text__icon" aria-hidden="false">!</span>
+            <strong class="warning-text__text font-normal" style="padding-left: 72px;">
+              <span class="warning-text__assistive">Warning</span>
+              Figures for offences involving knives or sharp instruments exclude Greater Manchester Police (GMP) as recent improvements to address previous undercounting of these offences means their data is not comparable with earlier figures.
+            </strong>
+          </div>
+
+      <p>For more information about offences involving knives or sharp instruments see the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
+
+      <h3>Theft offences</h3>
+
+      <p>  There were an estimated 3.8 million incidents of theft experienced by adults aged 16 years and over in the latest CSEW survey for the year ending March 2019. This figure has not changed significantly compared with the previous year. However, there have been indications of a rise in theft over the last two years, with a 13% increase compared with the year ending March 2017 (3.3 million offences). The CSEW is the most reliable indicator for long-term trends in overall levels of theft. The overall number of theft offences has fallen by 68% since the year ending December 1995, with long-term reductions in most categories of theft.</p>
+
+      <h3>Burglary, vehicle theft and robbery</h3>
+
+      <p>Some types of theft, such as domestic burglary and theft of a vehicle are less likely to be affected by the impact of recording improvements, as they are relatively well-reported to (and subsequently recorded by) the police. </p>
+
+      <p>Following rises in police recorded burglary offences recorded by the police in the years ending March 2016 and March 2017, latest figures show that the number of burglary offences decreased by 3% in the last year (to 422,870 offences).</p>
+
+      <p>  Police recorded vehicle offences increased by 2% in the year ending March 2019 (to 468,315 offences), continuing the rising trend seen over the last three years. However, the size of the increase has reduced over the last year.</p>
+
+      <p>Rises in police recorded robbery offences were evident for the fourth consecutive year, with an increase of 11% (to 85,736 offences) from the previous year.  While recording improvements are likely to have contributed, the impact is thought to be less pronounced than for some other crime types.</p>
+
+        <p>For more information about burglary, robbery and vehicle theft see the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
+
+      <h3>Fraud</h3>
+
+      <p>Findings for the year ending March 2019 estimated that the number of fraud incidents increased by 17% (to 3.8 million offences) from the previous year. The increase was driven mainly by a 15% increase in “bank and credit account fraud” (to 2.6 million offences). The CSEW provides the best measure of fraud offences directly experienced by individuals in England and Wales.</p>
+
+      <p>Police recorded fraud incorporates fraud offences collated by the National Fraud Intelligence Bureau (NFIB) from Action Fraud (the public-facing national fraud and cybercrime reporting centre) and two industry bodies, Cifas and UK Finance (who report instances of fraud where their member organisations have been a victim). Latest figures showed a 9% rise in the total number of offences referred to the NFIB (to 693,418 offences) compared with the previous year.</p>
+
+      <!-- Warning text -->
+      <div class="warning-text" style="padding: 0; margin-bottom: 24px;">
+        <span class="warning-text__icon" aria-hidden="false">!</span>
+        <strong class="warning-text__text font-normal" style="padding-left: 72px;">
+          <span class="warning-text__assistive">Warning</span>
+          Due to a temporary problem with NFIB systems, it is estimated that around 8,000 fraud offences referred by UK Finance have not yet been uploaded. The scale of the decrease compared with the previous year is likely to be substantially smaller than reported in these figures.
+        </strong>
+      </div>
+
+      <h3>Computer misuse</h3>
+
+      <p>In the year ending March 2019, the CSEW estimated that computer misuse offences decreased by 21% from the previous year (to 966,000 offences; Table 6). This decrease was largely owing to a fall in “computer viruses” (down 38% to 444,000 offences).</p>
+
+      <p>The CSEW provides the better indication of the volume of computer misuse offences as it captures some of the many incidents which go unreported. This can be seen by the large difference in volume of computer misuse offences reported by the CSEW (966,000 offences) and those referred to the NFIB by Action Fraud (21,321 offences). In addition, the two sources have different coverage which means it is not possible to make meaningful comparisons between them.</p>
+
+      <p>All “computer misuse crime” referred to the NFIB by Action Fraud increased by 1% in the latest year ending March 2019 (to 21,321 offences). This rise was due in part to a notable decrease of 37% over the latest year in computer viruses (to 4,177 offences). The overall rise was driven by increases in “hacking – extortion” (up 303% to 4,150 offences) and “hacking – social media and email” (up 3% to 8,340 offences).</p>
+
+      <p>For more information about computer misuse see the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
 
 
   <!-- Section 4 -  data -->
@@ -261,13 +334,10 @@ summary: "Crime against households and adults, also including data on crime expe
             <p>Fraud involves a person dishonestly and deliberately deceiving a victim for personal gain of property or money, or causing loss or risk of loss to another. The majority of incidents fall under the legal definition of “Fraud by false representation” – where a person makes a representation that they know to be untrue or misleading (e.g. banking and payment card frauds and dating scams).</p>
 
             <h3>Homicide</h3>
-            <p>  Homicide includes the offences of murder, manslaughter, corporate manslaughter and infanticide.</p>
+            <p>Homicide includes the offences of murder, manslaughter, corporate manslaughter and infanticide.</p>
 
             <h3>Knife and sharp instrument offences</h3>
             <p> An offence is recorded by the police as involving a knife or sharp instrument when the weapon is present during the offence or the threat is believed to be real. The weapon does not necessarily have to be used. These data are based on a special collection covering selected offences.</p>
-
-            <h3>  Offences involving firearms</h3>
-            <p>Offences involving a firearm include those where a firearm is fired, used as a blunt instrument, or used as a threat. Firearms include shotguns; handguns; rifles; imitation weapons such as BB guns or soft air weapons; other weapons such as CS gas, pepper spray and stun guns; and unidentified weapons. They exclude conventional air weapons, such as air rifles.</p>
 
             <h3>Overall theft offences</h3>
             <p>Crime Survey for England and Wales (CSEW) theft offences include all personal and household crime where items are stolen, including theft from the person; other theft of personal property; domestic burglary; vehicle-related theft; and bicycle theft.</p>
