Create Crime bulletin page template

--- a/prototypes.html
+++ b/prototypes.html
@@ -12,6 +12,12 @@ footer: false
   <div class="col-wrap">
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
+      <h2 class="margin-bottom--0">October 2019</h2>
+      <p>Continuing our testing of a single-page crime bulletin.</p>
+          <ul>
+            <li><a href="content-design/Crime/October2019">One crime bulletin</a></li>
+          </ul>
+
         <h2 class="margin-bottom--0">September 2019</h2>
         <p>We're testing whether users prefer one crime bulletin, containing all analysis of crime trends, or a modular bulletin, which breaks the analysis down by topic. These bulletins use the data from the March 2019 release.</p>
         <h4>Single page crime bulletin</h4>
