Add Hotjar tracking

--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -7,7 +7,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: true
 footer: true
-title: "Crime in England and Wales: year ending March 2019"
+title: "Crime in England and Wales: year ending June 2019"
 summary: "Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society."
 ---
 
@@ -59,6 +59,18 @@ summary: "Crime against households and adults, also including data on crime expe
 
   </style>
 
+        <!-- Hotjar Tracking Code for https://ons-website-prototypes.netlify.com/ -->
+      <script>
+          (function(h,o,t,j,a,r){
+              h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+              h._hjSettings={hjid:1526412,hjsv:6};
+              a=o.getElementsByTagName('head')[0];
+              r=o.createElement('script');r.async=1;
+              r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+              a.appendChild(r);
+          })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      </script>
+
 </head>
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -95,7 +107,7 @@ summary: "Crime against households and adults, also including data on crime expe
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--md-one col--lg-one">
-          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Crime in England and Wales: year ending March 2019
+          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Crime in England and Wales: year ending June 2019
           </h1>
           <p class="summary font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.
           </p>
@@ -123,7 +135,7 @@ summary: "Crime against households and adults, also including data on crime expe
             <p class="font-xsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Meghan Elkin</a></p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xsmall font-color--white"><strong>Release date:</strong><br>18 July 2019</p>
+            <p class="font-xsmall font-color--white"><strong>Release date:</strong><br>17 October 2019</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <p class="font-xsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
@@ -162,13 +174,13 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#homicide">Homicide</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#theft">Theft</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#theft">Overall theft offences</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#burglary-vehicle-theft-and-robbery">Burglary, vehicle theft and robbery</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#criminal-damage-and-arson">Criminal Damage and arson</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#criminal-damage-and-arson">Criminal damage and arson</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#fraud">Fraud</a>
@@ -258,7 +270,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
                     <!-- Chart -->
                       <h4>Title</h4>
-                      <h5">Subtitle</h5>
+                      <h5 class="flush--third--bottom">Subtitle</h5>
                         <div id="headingChart"></div>
                           <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                           <script>
@@ -310,6 +322,11 @@ summary: "Crime against households and adults, also including data on crime expe
                     </strong>
                   </div>
                 </div>
+
+          <h3>Overview of key crime types</h3>
+          <!-- Insert table here -->
+
+
 
           <p>For the latest headline figures relating to CSEW and police recorded crime see <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesappendixtables">Headline tables</a>. For more detailed figures including timeseries see <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesappendixtables">Appendix tables</a></p>
 
