Turn off prototype banner, site navigation and search for the crime prototype.Add in a manual prototype banner that we can customise for this page and change the colour to carrot.

--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -1,11 +1,11 @@
 ---
 layout: prototype
 header: true
-search: true
-warning: true
-primary-nav: true
-secondary-nav: true
-language-switch: true
+search: false
+warning: false
+primary-nav: false
+secondary-nav: false
+language-switch: false
 footer: true
 title: "Crime in England and Wales: year ending June 2019"
 summary: "Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society."
@@ -72,6 +72,14 @@ summary: "Crime against households and adults, also including data on crime expe
       </script>
 
 </head>
+
+<div class="background--carrot">
+	<div class="wrapper">
+		<div class="prototype padding-top--1 padding-bottom--1">
+			<p class="margin-bottom--0 font-xsmall"><strong class="banner__tag">Warning</strong> this is a prototype. The content may not be complete or accurate.</p>
+		</div>
+	</div>
+</div>
 
 <main id="main" role="main" tabindex="-1" class="prototype">
 
