Revert "Fix <sup> styling and add green button to crime prototype"
This reverts commit 62b7f77c545e99886494512328cc66c553c40804.

--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -57,10 +57,6 @@ summary: "Crime against households and adults, also including data on crime expe
       }
     }
 
-    sup {
-      vertical-align: super !important;
-    }
-
   </style>
 
         <!-- Hotjar Tracking Code for https://ons-website-prototypes.netlify.com/ -->
@@ -788,23 +784,22 @@ summary: "Crime against households and adults, also including data on crime expe
             <p><a class href="#toc">Back to table of contents</a></p>
 
           </div>
-        </article>
 
-        <!-- Right hand column -->
+        <!-- Right hand column
         <div class="col col--md-11 col--lg-20 margin-top-md--3">
 
-          <!-- view all data button -->
+          <!-- view all data button
 
           <div class="margin-bottom-sm--2 margin-bottom-md--2 print--hide">
-            <a style="font-size: 14px; line-height: 24px; text-decoration: none;" class="btn btn--primary btn--full-width" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/relateddata"
+            <a style="font-size: 14px; line-height: 24px; text-decoration: none;" class="btn btn--primary btn--full-width" href="/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2017provisionaland2016revisedresults/relateddata"
               data-gtm-title="" data-gtm-type="related-data">
               View all data used in this statistical bulletin
             </a>
           </div>
+        -->
 
-
-          <!-- Contact details -->
-          <!-- <div class="tiles__item tiles__item--nav-type flush-col">
+          <!-- Contact details
+          <div class="tiles__item tiles__item--nav-type flush-col">
             <h3 class="tiles__title-h3 tiles__title-h3--nav" style="font-size: 21px; font-weight: 400; line-height: 24px; padding: 20px 16px 4px 16px; margin: 0;">
               Contact details for this statistical bulletin
             </h3>
@@ -814,10 +809,10 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="font-size: 14px; line-height: 24px; text-decoration: none;" href="mailto:earnings@ons.gsi.gov.uk">earnings@ons.gsi.gov.uk</a><br>
                 Telephone: +44 (0)1633 45 6120
               </address>
-            </div> -->
+            </div>
 
         </div>
-
+        -->
       </div>
     </div>
 </main>
