--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -13,6 +13,16 @@ summary: "Crime against households and adults, also including data on crime expe
 
 <head>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150295384-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-150295384-1');
+      </script>
+
   <style>
     /* Styling for the header */
     .summary {
