--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -917,7 +917,7 @@ summary: "Crime against households and adults, also including data on crime expe
           <!-- view all data button -->
 
           <div class="margin-bottom-sm--2 margin-bottom-md--2 print--hide">
-            <a style="font-size: 14px; line-height: 24px; text-decoration: none;" class="btn btn--primary btn--full-width" href="/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/relateddata"
+            <a style="font-size: 14px; line-height: 24px; text-decoration: none;" class="btn btn--primary btn--full-width" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/relateddata"
               data-gtm-title="" data-gtm-type="related-data">
               View all data used in this statistical bulletin
             </a>
