--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -304,7 +304,7 @@ summary: "Crime against households and adults, also including data on crime expe
                         <div id="headingChart"></div>
                           <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                           <script>
-                            var pymParent = new pym.Parent('headingChart', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab", {});
+                            var pymParent = new pym.Parent('headingChart', "https://www.ons.gov.uk//embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab", {});
                             </script>
                         <p class="font-xsmall">Source: Office for National Statistics - Crime Survey for England and Wales</p>
 
@@ -313,15 +313,16 @@ summary: "Crime against households and adults, also including data on crime expe
                         <h5 class="margin-bottom--1">Download this chart</h5>
                           <div class="btn-group margin-bottom--2">
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab">
+                            href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab">
+
                                   Image
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab&format=csv">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab&format=csv">
                                   .CSV
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab&format=xls">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab&format=xls">
                                   .XLS
                               </a>
                           </div>
@@ -388,7 +389,7 @@ summary: "Crime against households and adults, also including data on crime expe
                         <div id="headingChart2"></div>
                           <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                           <script>
-                            var pymParent = new pym.Parent('headingChart2', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a", {});
+                            var pymParent = new pym.Parent('headingChart2', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a", {});
                             </script>
                         <p class="font-xsmall">Source: Office for National Statistics - Crime Survey for England and Wales</p>
 
@@ -440,7 +441,7 @@ summary: "Crime against households and adults, also including data on crime expe
                         <div id="headingChart3"></div>
                           <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                           <script>
-                            var pymParent = new pym.Parent('headingChart3', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d", {});
+                            var pymParent = new pym.Parent('headingChart3', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d", {});
                             </script>
                         <p class="font-xsmall">Source: Home Office – Police recorded crime</p>
 
@@ -513,7 +514,7 @@ summary: "Crime against households and adults, also including data on crime expe
           <div id="headingChart4"></div>
             <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
             <script>
-              var pymParent = new pym.Parent('headingChart4', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933", {});
+              var pymParent = new pym.Parent('headingChart4', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933", {});
               </script>
           <p class="font-xsmall">Source: Home Office – Police recorded crime</p>
 
@@ -571,7 +572,7 @@ summary: "Crime against households and adults, also including data on crime expe
                 <div id="headingChart5"></div>
                   <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                   <script>
-                    var pymParent = new pym.Parent('headingChart5', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4", {});
+                    var pymParent = new pym.Parent('headingChart5', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4", {});
                     </script>
                 <p class="font-xsmall">Source: Home Office – Police recorded crime</p>
 
@@ -623,7 +624,7 @@ summary: "Crime against households and adults, also including data on crime expe
                       <div id="headingChart6"></div>
                         <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                         <script>
-                          var pymParent = new pym.Parent('headingChart6', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822", {});
+                          var pymParent = new pym.Parent('headingChart6', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822", {});
                           </script>
                       <p class="font-xsmall">Source: Office for National Statistics – Crime Survey for England and Wales</p>
 
@@ -674,7 +675,7 @@ summary: "Crime against households and adults, also including data on crime expe
                     <div id="headingChart7"></div>
                       <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                       <script>
-                        var pymParent = new pym.Parent('headingChart7', "https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89", {});
+                        var pymParent = new pym.Parent('headingChart7', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89", {});
                         </script>
                     <p class="font-xsmall">Source: Home Office – Police recorded crime</p>
 
